src/pdm/parser/parser.output
Terminals unused in grammar

    "__42__"
    "struct"
    "then"
    "match"
    "with"
    "extern"
    "as"
    "for"
    "CORE_PROFILE"
    "BROWSER_PROFILE"
    "NATIVE_PROFILE"
    ":"
    "->"
    "^"
    "&"
    "!"
    "|"
    "EOS"
    "<null>"


Grammar

    0 $accept: script $end

    1 script: script_header script_field_sl

    2 script_header: %empty
    3              | script_header script_header_stmt ";"

    4 script_header_stmt: import_stmt

    5 script_field: "mod" vid native_mod_exp

    6 script_field_sl: script_field ";"
    7                | script_field_sl script_field ";"

    8 native_mod_exp: "{" mod_field_sl "}"
    9               | tpattern "{" mod_field_sl "}"
   10               | "{" "}"
   11               | tpattern "{" "}"

   12 mod_field_sl: mod_field ";"
   13             | mod_field_sl mod_field ";"

   14 mod_field: "let" vid "=" long_exp
   15          | "let" tid "=" type_spec
   16          | "let" cid "=" class_spec
   17          | "mod" vid native_mod_exp
   18          | "let" vid vpattern type_spec "=" bracketed_exp
   19          | "let" cid "(" tid class_spec ")" "=" "{" type_query_exp_sl0 "}"

   20 import_stmt: "imports" "{" import_field_group_sl0 "}"

   21 import_field_group_sl0: %empty
   22                       | import_field_group_sl0 import_field_group ";"

   23 import_field_group: import_field_cl1 "from" stringl

   24 import_field_cl1: vid
   25                 | import_field_cl1 "," vid

   26 chain_prefix_stmt: const_stmt
   27                  | val_stmt
   28                  | var_stmt
   29                  | set_stmt
   30                  | discard_stmt

   31 const_stmt: "const" lpattern "=" expr

   32 val_stmt: "val" lpattern "=" expr

   33 var_stmt: "var" lpattern "=" expr

   34 set_stmt: "set" expr "=" expr

   35 discard_stmt: "discard" expr

   36 tid: "TypeId"

   37 vid: "val_id"

   38 cid: "CLS_ID"

   39 floatl: "4.2"

   40 stringl: "'sq-string-literal'"
   41        | "\"dq-string-literal\""

   42 mod_prefix: vid "::"
   43           | vid "[" targ_cl "]" "::"
   44           | mod_prefix vid "::"
   45           | mod_prefix vid "[" targ_cl "]" "::"

   46 expr: binary_exp

   47 long_exp: expr
   48         | lambda_exp

   49 expr_cl2: expr "," expr
   50         | expr_cl2 "," expr

   51 type_query_exp_sl0: %empty
   52                   | type_query_exp_sl0 type_query_exp ";"

   53 bracketed_exp: paren_exp
   54              | vtupleExpr
   55              | vstructExpr
   56              | chain_exp

   57 paren_exp: "(" long_exp ")"

   58 vtupleExpr: "(" ")"
   59           | "(" expr "," ")"
   60           | "(" expr_cl2 ")"

   61 vstructExpr: "{" struct_exp_field_cl "}"

   62 primary_exp: bracketed_exp
   63            | vid
   64            | int_expr
   65            | floatl
   66            | stringls
   67            | if_exp
   68            | mod_prefix vid

   69 int_expr: "42"
   70         | "0x2a"
   71         | "42u"
   72         | "0x2Au"

   73 stringls: "'sq-string-literal'"
   74         | "\"dq-string-literal\""
   75         | stringls "'sq-string-literal'"
   76         | stringls "\"dq-string-literal\""

   77 if_exp: "if" bracketed_exp bracketed_exp
   78       | "if" bracketed_exp bracketed_exp "else" primary_exp

   79 chain_exp: "{" "}"
   80          | "{" long_exp "}"
   81          | "{" chain_prefix "}"
   82          | "{" chain_prefix long_exp "}"

   83 chain_prefix: chain_prefix_stmt ";"
   84             | chain_prefix chain_prefix_stmt ";"

   85 lambda_exp: fn_type_spec bracketed_exp

   86 postfix_exp: primary_exp
   87            | vcall_exp
   88            | dot_name_exp
   89            | dot_index_exp

   90 vcall_exp: postfix_exp "(" ")"
   91          | postfix_exp "(" varg_cl ")"

   92 dot_name_exp: postfix_exp "." "val_id"
   93             | type_spec "::" "TypeId"
   94             | type_spec "::" "TypeId" "using" paren_exp

   95 dot_index_exp: postfix_exp "." int_expr
   96              | postfix_exp "." bracketed_exp

   97 unary_exp: postfix_exp
   98          | unary_op unary_exp

   99 unary_op: "+"
  100         | "-"
  101         | "not"

  102 binary_exp: or_binary_exp

  103 mul_binary_op: "*"
  104              | "/"
  105              | "%"

  106 mul_binary_exp: unary_exp
  107               | mul_binary_exp mul_binary_op unary_exp

  108 add_binary_op: "+"
  109              | "-"

  110 add_binary_exp: mul_binary_exp
  111               | add_binary_exp add_binary_op mul_binary_exp

  112 cmp_binary_op: "<"
  113              | "<="
  114              | ">"
  115              | ">="

  116 cmp_binary_exp: add_binary_exp
  117               | cmp_binary_exp cmp_binary_op add_binary_exp

  118 eq_binary_op: "=="
  119             | "!="

  120 eq_binary_exp: cmp_binary_exp
  121              | eq_binary_exp eq_binary_op cmp_binary_exp

  122 and_binary_exp: eq_binary_exp
  123               | and_binary_exp "and" eq_binary_exp

  124 xor_binary_exp: and_binary_exp
  125               | xor_binary_exp "xor" and_binary_exp

  126 or_binary_exp: xor_binary_exp
  127              | or_binary_exp "or" xor_binary_exp

  128 type_query_exp: type_spec type_query_op type_spec

  129 type_query_op: ":<"
  130              | ">:"
  131              | "=="

  132 type_spec_cl2: type_spec "," type_spec
  133              | type_spec_cl2 "," type_spec

  134 type_spec: tid
  135          | mod_prefix_tid
  136          | tuple_type_spec
  137          | array_type_spec
  138          | struct_type_spec
  139          | enum_type_spec
  140          | fn_type_spec

  141 mod_prefix_tid: mod_prefix tid

  142 tuple_type_spec: "{" type_spec "}"
  143                | "{" type_spec_cl2 "}"

  144 array_type_spec: "[" type_spec "*" expr "]"

  145 struct_type_spec: "{" struct_type_spec_field_cl "}"

  146 struct_type_spec_field_cl: struct_type_spec_field
  147                          | struct_type_spec_field_cl "," struct_type_spec_field

  148 struct_type_spec_field: vid type_spec

  149 enum_type_spec_field: tid
  150                     | tid type_spec

  151 enum_type_spec_field_cl: enum_type_spec_field
  152                        | enum_type_spec_field_cl "," enum_type_spec_field

  153 enum_type_spec: "enum" "{" enum_type_spec_field_cl "}"

  154 fn_type_spec: "anonymous_fn" vpattern type_spec

  155 targ: type_spec
  156     | expr

  157 targ_cl: targ
  158        | targ_cl "," targ

  159 varg: expr
  160     | "out" expr
  161     | "inout" expr

  162 varg_cl: varg
  163        | varg_cl "," varg

  164 class_spec: primary_class_spec

  165 primary_class_spec: cid
  166                   | mod_prefix_cid_class_spec
  167                   | class_exp_class_spec

  168 mod_prefix_cid_class_spec: mod_prefix cid

  169 class_exp_class_spec: "typeclass" "(" tid class_spec ")" "{" type_query_exp_sl0 "}"

  170 struct_exp_field: vid "=" expr

  171 vpattern_field: vid type_spec
  172               | "out" vid type_spec
  173               | "inout" vid type_spec

  174 lpattern_field: vid type_spec
  175               | vid

  176 tpattern_field: vid type_spec
  177               | tid class_spec

  178 destructured_lpattern: "{" lpattern_field_cl "}"

  179 lpattern: lpattern_field
  180         | destructured_lpattern

  181 vpattern: "(" vpattern_field_cl ")"
  182         | "(" ")"

  183 tpattern: "[" tpattern_field_cl1 "]"

  184 vpattern_field_cl: vpattern_field
  185                  | vpattern_field_cl "," vpattern_field

  186 lpattern_field_cl: lpattern_field
  187                  | lpattern_field_cl "," lpattern_field

  188 tpattern_field_cl1: tpattern_field
  189                   | tpattern_field_cl1 "," tpattern_field

  190 struct_exp_field_cl: struct_exp_field
  191                    | struct_exp_field_cl "," struct_exp_field


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    "val_id" <TokenInfo> (258) 37 92
    "TypeId" <TokenInfo> (259) 36 93 94
    "CLS_ID" <TokenInfo> (260) 38
    "__42__" <TokenInfo> (261)
    "using" (262) 94
    "mod" (263) 5 17
    "struct" (264)
    "enum" (265) 153
    "typeclass" (266) 169
    "if" (267) 77 78
    "then" (268)
    "else" (269) 78
    "match" (270)
    "with" (271)
    "imports" (272) 20
    "extern" (273)
    "from" (274) 23
    "const" (275) 31
    "val" (276) 32
    "var" (277) 33
    "let" (278) 14 15 16 18 19
    "set" (279) 34
    "anonymous_fn" (280) 154
    "and" (281) 123
    "xor" (282) 125
    "or" (283) 127
    "not" (284) 101
    "out" (285) 160 172
    "inout" (286) 161 173
    "discard" (287) 35
    "as" (288)
    "for" (289)
    "CORE_PROFILE" (290)
    "BROWSER_PROFILE" (291)
    "NATIVE_PROFILE" (292)
    "42" <TokenInfo> (293) 69
    "0x2a" <TokenInfo> (294) 70
    "42u" <TokenInfo> (295) 71
    "0x2Au" <TokenInfo> (296) 72
    "4.2" <TokenInfo> (297) 39
    "\"dq-string-literal\"" <TokenInfo> (298) 41 74 76
    "'sq-string-literal'" <TokenInfo> (299) 40 73 75
    "." (300) 92 95 96
    ":" (301)
    "," (302) 25 49 50 59 132 133 147 152 158 163 185 187 189 191
    ";" (303) 3 6 7 12 13 22 52 83 84
    "::" (304) 42 43 44 45 93 94
    "(" (305) 19 57 58 59 60 90 91 169 181 182
    ")" (306) 19 57 58 59 60 90 91 169 181 182
    "[" (307) 43 45 144 183
    "]" (308) 43 45 144 183
    "{" (309) 8 9 10 11 19 20 61 79 80 81 82 142 143 145 153 169 178
    "}" (310) 8 9 10 11 19 20 61 79 80 81 82 142 143 145 153 169 178
    "->" (311)
    "*" (312) 103 144
    "/" (313) 104
    "%" (314) 105
    "+" (315) 99 108
    "-" (316) 100 109
    "<" (317) 112
    "<=" (318) 113
    ">" (319) 114
    ">=" (320) 115
    "=" (321) 14 15 16 18 19 31 32 33 34 170
    "==" (322) 118 131
    "!=" (323) 119
    "^" (324)
    "&" (325)
    "!" (326)
    "|" (327)
    "EOS" (328)
    ":<" (329) 129
    ">:" (330) 130
    "<null>" (331)


Nonterminals, with rules where they appear

    $accept (77)
        on left: 0
    script <pdm::ast::Script*> (78)
        on left: 1
        on right: 0
    script_header <std::vector<pdm::ast::HeaderStmt*>> (79)
        on left: 2 3
        on right: 1 3
    script_header_stmt <pdm::ast::HeaderStmt*> (80)
        on left: 4
        on right: 3
    script_field <pdm::ast::Script::Field*> (81)
        on left: 5
        on right: 6 7
    script_field_sl <std::vector<pdm::ast::Script::Field*>> (82)
        on left: 6 7
        on right: 1 7
    native_mod_exp <pdm::ast::BaseModExp*> (83)
        on left: 8 9 10 11
        on right: 5 17
    mod_field_sl <std::vector<pdm::ast::BaseModExp::Field*>> (84)
        on left: 12 13
        on right: 8 9 13
    mod_field <pdm::ast::BaseModExp::Field*> (85)
        on left: 14 15 16 17 18 19
        on right: 12 13
    import_stmt <pdm::ast::HeaderStmt*> (86)
        on left: 20
        on right: 4
    import_field_group_sl0 <std::vector<ast::ImportStmt::FieldGroup*>> (87)
        on left: 21 22
        on right: 20 22
    import_field_group <ast::ImportStmt::FieldGroup*> (88)
        on left: 23
        on right: 22
    import_field_cl1 <std::vector<ast::ImportStmt::Field*>> (89)
        on left: 24 25
        on right: 23 25
    chain_prefix_stmt <pdm::ast::Stmt*> (90)
        on left: 26 27 28 29 30
        on right: 83 84
    const_stmt <pdm::ast::Stmt*> (91)
        on left: 31
        on right: 26
    val_stmt <pdm::ast::Stmt*> (92)
        on left: 32
        on right: 27
    var_stmt <pdm::ast::Stmt*> (93)
        on left: 33
        on right: 28
    set_stmt <pdm::ast::Stmt*> (94)
        on left: 34
        on right: 29
    discard_stmt <pdm::ast::Stmt*> (95)
        on left: 35
        on right: 30
    tid <TokenInfo> (96)
        on left: 36
        on right: 15 19 134 141 149 150 169 177
    vid <TokenInfo> (97)
        on left: 37
        on right: 5 14 17 18 24 25 42 43 44 45 63 68 148 170 171 172 173 174 175 176
    cid <TokenInfo> (98)
        on left: 38
        on right: 16 19 165 168
    floatl <TokenInfo> (99)
        on left: 39
        on right: 65
    stringl <TokenInfo> (100)
        on left: 40 41
        on right: 23
    mod_prefix <pdm::ast::ModAddress*> (101)
        on left: 42 43 44 45
        on right: 44 45 68 141 168
    expr <pdm::ast::Exp*> (102)
        on left: 46
        on right: 31 32 33 34 35 47 49 50 59 144 156 159 160 161 170
    long_exp <pdm::ast::Exp*> (103)
        on left: 47 48
        on right: 14 57 80 82
    expr_cl2 <std::vector<pdm::ast::Exp*>> (104)
        on left: 49 50
        on right: 50 60
    type_query_exp_sl0 <std::vector<pdm::ast::TypeQueryExp*>> (105)
        on left: 51 52
        on right: 19 52 169
    bracketed_exp <pdm::ast::Exp*> (106)
        on left: 53 54 55 56
        on right: 18 62 77 78 85 96
    paren_exp <pdm::ast::Exp*> (107)
        on left: 57
        on right: 53 94
    vtupleExpr <pdm::ast::Exp*> (108)
        on left: 58 59 60
        on right: 54
    vstructExpr <pdm::ast::Exp*> (109)
        on left: 61
        on right: 55
    primary_exp <pdm::ast::Exp*> (110)
        on left: 62 63 64 65 66 67 68
        on right: 78 86
    int_expr <pdm::ast::Exp*> (111)
        on left: 69 70 71 72
        on right: 64 95
    stringls <std::vector<pdm::ast::StringExp::Piece>> (112)
        on left: 73 74 75 76
        on right: 66 75 76
    if_exp <pdm::ast::Exp*> (113)
        on left: 77 78
        on right: 67
    chain_exp <pdm::ast::Exp*> (114)
        on left: 79 80 81 82
        on right: 56
    chain_prefix <std::vector<pdm::ast::Stmt*>> (115)
        on left: 83 84
        on right: 81 82 84
    lambda_exp <pdm::ast::Exp*> (116)
        on left: 85
        on right: 48
    postfix_exp <pdm::ast::Exp*> (117)
        on left: 86 87 88 89
        on right: 90 91 92 95 96 97
    vcall_exp <pdm::ast::Exp*> (118)
        on left: 90 91
        on right: 87
    dot_name_exp <pdm::ast::Exp*> (119)
        on left: 92 93 94
        on right: 88
    dot_index_exp <pdm::ast::Exp*> (120)
        on left: 95 96
        on right: 89
    unary_exp <pdm::ast::Exp*> (121)
        on left: 97 98
        on right: 98 106 107
    unary_op <pdm::ast::UnaryOperator> (122)
        on left: 99 100 101
        on right: 98
    binary_exp <pdm::ast::Exp*> (123)
        on left: 102
        on right: 46
    mul_binary_op <pdm::ast::BinaryOperator> (124)
        on left: 103 104 105
        on right: 107
    mul_binary_exp <pdm::ast::Exp*> (125)
        on left: 106 107
        on right: 107 110 111
    add_binary_op <pdm::ast::BinaryOperator> (126)
        on left: 108 109
        on right: 111
    add_binary_exp <pdm::ast::Exp*> (127)
        on left: 110 111
        on right: 111 116 117
    cmp_binary_op <pdm::ast::BinaryOperator> (128)
        on left: 112 113 114 115
        on right: 117
    cmp_binary_exp <pdm::ast::Exp*> (129)
        on left: 116 117
        on right: 117 120 121
    eq_binary_op <pdm::ast::BinaryOperator> (130)
        on left: 118 119
        on right: 121
    eq_binary_exp <pdm::ast::Exp*> (131)
        on left: 120 121
        on right: 121 122 123
    and_binary_exp <pdm::ast::Exp*> (132)
        on left: 122 123
        on right: 123 124 125
    xor_binary_exp <pdm::ast::Exp*> (133)
        on left: 124 125
        on right: 125 126 127
    or_binary_exp <pdm::ast::Exp*> (134)
        on left: 126 127
        on right: 102 127
    type_query_exp <pdm::ast::TypeQueryExp*> (135)
        on left: 128
        on right: 52
    type_query_op <pdm::ast::TypeQueryKind> (136)
        on left: 129 130 131
        on right: 128
    type_spec_cl2 <std::vector<pdm::ast::TypeSpec*>> (137)
        on left: 132 133
        on right: 133 143
    type_spec <pdm::ast::TypeSpec*> (138)
        on left: 134 135 136 137 138 139 140
        on right: 15 18 93 94 128 132 133 142 144 148 150 154 155 171 172 173 174 176
    mod_prefix_tid <pdm::ast::TypeSpec*> (139)
        on left: 141
        on right: 135
    tuple_type_spec <pdm::ast::TypeSpec*> (140)
        on left: 142 143
        on right: 136
    array_type_spec <pdm::ast::TypeSpec*> (141)
        on left: 144
        on right: 137
    struct_type_spec <pdm::ast::TypeSpec*> (142)
        on left: 145
        on right: 138
    struct_type_spec_field_cl <std::vector<pdm::ast::StructTypeSpec::Field*>> (143)
        on left: 146 147
        on right: 145 147
    struct_type_spec_field <pdm::ast::StructTypeSpec::Field*> (144)
        on left: 148
        on right: 146 147
    enum_type_spec_field <pdm::ast::EnumTypeSpec::Field*> (145)
        on left: 149 150
        on right: 151 152
    enum_type_spec_field_cl <std::vector<pdm::ast::EnumTypeSpec::Field*>> (146)
        on left: 151 152
        on right: 152 153
    enum_type_spec <pdm::ast::TypeSpec*> (147)
        on left: 153
        on right: 139
    fn_type_spec <pdm::ast::FnTypeSpec*> (148)
        on left: 154
        on right: 85 140
    targ <pdm::ast::TArg*> (149)
        on left: 155 156
        on right: 157 158
    targ_cl <std::vector<pdm::ast::TArg*>> (150)
        on left: 157 158
        on right: 43 45 158
    varg <pdm::ast::VArg*> (151)
        on left: 159 160 161
        on right: 162 163
    varg_cl <std::vector<pdm::ast::VArg*>> (152)
        on left: 162 163
        on right: 91 163
    class_spec <pdm::ast::ClassSpec*> (153)
        on left: 164
        on right: 16 19 169 177
    primary_class_spec <pdm::ast::ClassSpec*> (154)
        on left: 165 166 167
        on right: 164
    mod_prefix_cid_class_spec <pdm::ast::ClassSpec*> (155)
        on left: 168
        on right: 166
    class_exp_class_spec <pdm::ast::ClassSpec*> (156)
        on left: 169
        on right: 167
    struct_exp_field <pdm::ast::StructExp::Field*> (157)
        on left: 170
        on right: 190 191
    vpattern_field <pdm::ast::VPattern::Field*> (158)
        on left: 171 172 173
        on right: 184 185
    lpattern_field <pdm::ast::LPattern::Field*> (159)
        on left: 174 175
        on right: 179 186 187
    tpattern_field <pdm::ast::TPattern::Field*> (160)
        on left: 176 177
        on right: 188 189
    destructured_lpattern <pdm::ast::LPattern*> (161)
        on left: 178
        on right: 180
    lpattern <pdm::ast::LPattern*> (162)
        on left: 179 180
        on right: 31 32 33
    vpattern <pdm::ast::VPattern*> (163)
        on left: 181 182
        on right: 18 154
    tpattern <pdm::ast::TPattern*> (164)
        on left: 183
        on right: 9 11
    vpattern_field_cl <std::vector<pdm::ast::VPattern::Field*>> (165)
        on left: 184 185
        on right: 181 185
    lpattern_field_cl <std::vector<pdm::ast::LPattern::Field*>> (166)
        on left: 186 187
        on right: 178 187
    tpattern_field_cl1 <std::vector<pdm::ast::TPattern::Field*>> (167)
        on left: 188 189
        on right: 183 189
    struct_exp_field_cl <std::vector<pdm::ast::StructExp::Field*>> (168)
        on left: 190 191
        on right: 61 191


State 0

    0 $accept: • script $end

    $default  reduce using rule 2 (script_header)

    script         go to state 1
    script_header  go to state 2


State 1

    0 $accept: script • $end

    $end  shift, and go to state 3


State 2

    1 script: script_header • script_field_sl
    3 script_header: script_header • script_header_stmt ";"

    "mod"      shift, and go to state 4
    "imports"  shift, and go to state 5

    script_header_stmt  go to state 6
    script_field        go to state 7
    script_field_sl     go to state 8
    import_stmt         go to state 9


State 3

    0 $accept: script $end •

    $default  accept


State 4

    5 script_field: "mod" • vid native_mod_exp

    "val_id"  shift, and go to state 10

    vid  go to state 11


State 5

   20 import_stmt: "imports" • "{" import_field_group_sl0 "}"

    "{"  shift, and go to state 12


State 6

    3 script_header: script_header script_header_stmt • ";"

    ";"  shift, and go to state 13


State 7

    6 script_field_sl: script_field • ";"

    ";"  shift, and go to state 14


State 8

    1 script: script_header script_field_sl •
    7 script_field_sl: script_field_sl • script_field ";"

    "mod"  shift, and go to state 4

    $default  reduce using rule 1 (script)

    script_field  go to state 15


State 9

    4 script_header_stmt: import_stmt •

    $default  reduce using rule 4 (script_header_stmt)


State 10

   37 vid: "val_id" •

    $default  reduce using rule 37 (vid)


State 11

    5 script_field: "mod" vid • native_mod_exp

    "["  shift, and go to state 16
    "{"  shift, and go to state 17

    native_mod_exp  go to state 18
    tpattern        go to state 19


State 12

   20 import_stmt: "imports" "{" • import_field_group_sl0 "}"

    $default  reduce using rule 21 (import_field_group_sl0)

    import_field_group_sl0  go to state 20


State 13

    3 script_header: script_header script_header_stmt ";" •

    $default  reduce using rule 3 (script_header)


State 14

    6 script_field_sl: script_field ";" •

    $default  reduce using rule 6 (script_field_sl)


State 15

    7 script_field_sl: script_field_sl script_field • ";"

    ";"  shift, and go to state 21


State 16

  183 tpattern: "[" • tpattern_field_cl1 "]"

    "val_id"  shift, and go to state 10
    "TypeId"  shift, and go to state 22

    tid                 go to state 23
    vid                 go to state 24
    tpattern_field      go to state 25
    tpattern_field_cl1  go to state 26


State 17

    8 native_mod_exp: "{" • mod_field_sl "}"
   10               | "{" • "}"

    "mod"  shift, and go to state 27
    "let"  shift, and go to state 28
    "}"    shift, and go to state 29

    mod_field_sl  go to state 30
    mod_field     go to state 31


State 18

    5 script_field: "mod" vid native_mod_exp •

    $default  reduce using rule 5 (script_field)


State 19

    9 native_mod_exp: tpattern • "{" mod_field_sl "}"
   11               | tpattern • "{" "}"

    "{"  shift, and go to state 32


State 20

   20 import_stmt: "imports" "{" import_field_group_sl0 • "}"
   22 import_field_group_sl0: import_field_group_sl0 • import_field_group ";"

    "val_id"  shift, and go to state 10
    "}"       shift, and go to state 33

    import_field_group  go to state 34
    import_field_cl1    go to state 35
    vid                 go to state 36


State 21

    7 script_field_sl: script_field_sl script_field ";" •

    $default  reduce using rule 7 (script_field_sl)


State 22

   36 tid: "TypeId" •

    $default  reduce using rule 36 (tid)


State 23

  177 tpattern_field: tid • class_spec

    "val_id"     shift, and go to state 10
    "CLS_ID"     shift, and go to state 37
    "typeclass"  shift, and go to state 38

    vid                        go to state 39
    cid                        go to state 40
    mod_prefix                 go to state 41
    class_spec                 go to state 42
    primary_class_spec         go to state 43
    mod_prefix_cid_class_spec  go to state 44
    class_exp_class_spec       go to state 45


State 24

  176 tpattern_field: vid • type_spec

    "val_id"        shift, and go to state 10
    "TypeId"        shift, and go to state 22
    "enum"          shift, and go to state 46
    "anonymous_fn"  shift, and go to state 47
    "["             shift, and go to state 48
    "{"             shift, and go to state 49

    tid               go to state 50
    vid               go to state 39
    mod_prefix        go to state 51
    type_spec         go to state 52
    mod_prefix_tid    go to state 53
    tuple_type_spec   go to state 54
    array_type_spec   go to state 55
    struct_type_spec  go to state 56
    enum_type_spec    go to state 57
    fn_type_spec      go to state 58


State 25

  188 tpattern_field_cl1: tpattern_field •

    $default  reduce using rule 188 (tpattern_field_cl1)


State 26

  183 tpattern: "[" tpattern_field_cl1 • "]"
  189 tpattern_field_cl1: tpattern_field_cl1 • "," tpattern_field

    ","  shift, and go to state 59
    "]"  shift, and go to state 60


State 27

   17 mod_field: "mod" • vid native_mod_exp

    "val_id"  shift, and go to state 10

    vid  go to state 61


State 28

   14 mod_field: "let" • vid "=" long_exp
   15          | "let" • tid "=" type_spec
   16          | "let" • cid "=" class_spec
   18          | "let" • vid vpattern type_spec "=" bracketed_exp
   19          | "let" • cid "(" tid class_spec ")" "=" "{" type_query_exp_sl0 "}"

    "val_id"  shift, and go to state 10
    "TypeId"  shift, and go to state 22
    "CLS_ID"  shift, and go to state 37

    tid  go to state 62
    vid  go to state 63
    cid  go to state 64


State 29

   10 native_mod_exp: "{" "}" •

    $default  reduce using rule 10 (native_mod_exp)


State 30

    8 native_mod_exp: "{" mod_field_sl • "}"
   13 mod_field_sl: mod_field_sl • mod_field ";"

    "mod"  shift, and go to state 27
    "let"  shift, and go to state 28
    "}"    shift, and go to state 65

    mod_field  go to state 66


State 31

   12 mod_field_sl: mod_field • ";"

    ";"  shift, and go to state 67


State 32

    9 native_mod_exp: tpattern "{" • mod_field_sl "}"
   11               | tpattern "{" • "}"

    "mod"  shift, and go to state 27
    "let"  shift, and go to state 28
    "}"    shift, and go to state 68

    mod_field_sl  go to state 69
    mod_field     go to state 31


State 33

   20 import_stmt: "imports" "{" import_field_group_sl0 "}" •

    $default  reduce using rule 20 (import_stmt)


State 34

   22 import_field_group_sl0: import_field_group_sl0 import_field_group • ";"

    ";"  shift, and go to state 70


State 35

   23 import_field_group: import_field_cl1 • "from" stringl
   25 import_field_cl1: import_field_cl1 • "," vid

    "from"  shift, and go to state 71
    ","     shift, and go to state 72


State 36

   24 import_field_cl1: vid •

    $default  reduce using rule 24 (import_field_cl1)


State 37

   38 cid: "CLS_ID" •

    $default  reduce using rule 38 (cid)


State 38

  169 class_exp_class_spec: "typeclass" • "(" tid class_spec ")" "{" type_query_exp_sl0 "}"

    "("  shift, and go to state 73


State 39

   42 mod_prefix: vid • "::"
   43           | vid • "[" targ_cl "]" "::"

    "::"  shift, and go to state 74
    "["   shift, and go to state 75


State 40

  165 primary_class_spec: cid •

    $default  reduce using rule 165 (primary_class_spec)


State 41

   44 mod_prefix: mod_prefix • vid "::"
   45           | mod_prefix • vid "[" targ_cl "]" "::"
  168 mod_prefix_cid_class_spec: mod_prefix • cid

    "val_id"  shift, and go to state 10
    "CLS_ID"  shift, and go to state 37

    vid  go to state 76
    cid  go to state 77


State 42

  177 tpattern_field: tid class_spec •

    $default  reduce using rule 177 (tpattern_field)


State 43

  164 class_spec: primary_class_spec •

    $default  reduce using rule 164 (class_spec)


State 44

  166 primary_class_spec: mod_prefix_cid_class_spec •

    $default  reduce using rule 166 (primary_class_spec)


State 45

  167 primary_class_spec: class_exp_class_spec •

    $default  reduce using rule 167 (primary_class_spec)


State 46

  153 enum_type_spec: "enum" • "{" enum_type_spec_field_cl "}"

    "{"  shift, and go to state 78


State 47

  154 fn_type_spec: "anonymous_fn" • vpattern type_spec

    "("  shift, and go to state 79

    vpattern  go to state 80


State 48

  144 array_type_spec: "[" • type_spec "*" expr "]"

    "val_id"        shift, and go to state 10
    "TypeId"        shift, and go to state 22
    "enum"          shift, and go to state 46
    "anonymous_fn"  shift, and go to state 47
    "["             shift, and go to state 48
    "{"             shift, and go to state 49

    tid               go to state 50
    vid               go to state 39
    mod_prefix        go to state 51
    type_spec         go to state 81
    mod_prefix_tid    go to state 53
    tuple_type_spec   go to state 54
    array_type_spec   go to state 55
    struct_type_spec  go to state 56
    enum_type_spec    go to state 57
    fn_type_spec      go to state 58


State 49

  142 tuple_type_spec: "{" • type_spec "}"
  143                | "{" • type_spec_cl2 "}"
  145 struct_type_spec: "{" • struct_type_spec_field_cl "}"

    "val_id"        shift, and go to state 10
    "TypeId"        shift, and go to state 22
    "enum"          shift, and go to state 46
    "anonymous_fn"  shift, and go to state 47
    "["             shift, and go to state 48
    "{"             shift, and go to state 49

    tid                        go to state 50
    vid                        go to state 82
    mod_prefix                 go to state 51
    type_spec_cl2              go to state 83
    type_spec                  go to state 84
    mod_prefix_tid             go to state 53
    tuple_type_spec            go to state 54
    array_type_spec            go to state 55
    struct_type_spec           go to state 56
    struct_type_spec_field_cl  go to state 85
    struct_type_spec_field     go to state 86
    enum_type_spec             go to state 57
    fn_type_spec               go to state 58


State 50

  134 type_spec: tid •

    $default  reduce using rule 134 (type_spec)


State 51

   44 mod_prefix: mod_prefix • vid "::"
   45           | mod_prefix • vid "[" targ_cl "]" "::"
  141 mod_prefix_tid: mod_prefix • tid

    "val_id"  shift, and go to state 10
    "TypeId"  shift, and go to state 22

    tid  go to state 87
    vid  go to state 76


State 52

  176 tpattern_field: vid type_spec •

    $default  reduce using rule 176 (tpattern_field)


State 53

  135 type_spec: mod_prefix_tid •

    $default  reduce using rule 135 (type_spec)


State 54

  136 type_spec: tuple_type_spec •

    $default  reduce using rule 136 (type_spec)


State 55

  137 type_spec: array_type_spec •

    $default  reduce using rule 137 (type_spec)


State 56

  138 type_spec: struct_type_spec •

    $default  reduce using rule 138 (type_spec)


State 57

  139 type_spec: enum_type_spec •

    $default  reduce using rule 139 (type_spec)


State 58

  140 type_spec: fn_type_spec •

    $default  reduce using rule 140 (type_spec)


State 59

  189 tpattern_field_cl1: tpattern_field_cl1 "," • tpattern_field

    "val_id"  shift, and go to state 10
    "TypeId"  shift, and go to state 22

    tid             go to state 23
    vid             go to state 24
    tpattern_field  go to state 88


State 60

  183 tpattern: "[" tpattern_field_cl1 "]" •

    $default  reduce using rule 183 (tpattern)


State 61

   17 mod_field: "mod" vid • native_mod_exp

    "["  shift, and go to state 16
    "{"  shift, and go to state 17

    native_mod_exp  go to state 89
    tpattern        go to state 19


State 62

   15 mod_field: "let" tid • "=" type_spec

    "="  shift, and go to state 90


State 63

   14 mod_field: "let" vid • "=" long_exp
   18          | "let" vid • vpattern type_spec "=" bracketed_exp

    "("  shift, and go to state 79
    "="  shift, and go to state 91

    vpattern  go to state 92


State 64

   16 mod_field: "let" cid • "=" class_spec
   19          | "let" cid • "(" tid class_spec ")" "=" "{" type_query_exp_sl0 "}"

    "("  shift, and go to state 93
    "="  shift, and go to state 94


State 65

    8 native_mod_exp: "{" mod_field_sl "}" •

    $default  reduce using rule 8 (native_mod_exp)


State 66

   13 mod_field_sl: mod_field_sl mod_field • ";"

    ";"  shift, and go to state 95


State 67

   12 mod_field_sl: mod_field ";" •

    $default  reduce using rule 12 (mod_field_sl)


State 68

   11 native_mod_exp: tpattern "{" "}" •

    $default  reduce using rule 11 (native_mod_exp)


State 69

    9 native_mod_exp: tpattern "{" mod_field_sl • "}"
   13 mod_field_sl: mod_field_sl • mod_field ";"

    "mod"  shift, and go to state 27
    "let"  shift, and go to state 28
    "}"    shift, and go to state 96

    mod_field  go to state 66


State 70

   22 import_field_group_sl0: import_field_group_sl0 import_field_group ";" •

    $default  reduce using rule 22 (import_field_group_sl0)


State 71

   23 import_field_group: import_field_cl1 "from" • stringl

    "\"dq-string-literal\""  shift, and go to state 97
    "'sq-string-literal'"    shift, and go to state 98

    stringl  go to state 99


State 72

   25 import_field_cl1: import_field_cl1 "," • vid

    "val_id"  shift, and go to state 10

    vid  go to state 100


State 73

  169 class_exp_class_spec: "typeclass" "(" • tid class_spec ")" "{" type_query_exp_sl0 "}"

    "TypeId"  shift, and go to state 22

    tid  go to state 101


State 74

   42 mod_prefix: vid "::" •

    $default  reduce using rule 42 (mod_prefix)


State 75

   43 mod_prefix: vid "[" • targ_cl "]" "::"
